--- a/prometheus/prometheus.yaml
+++ b/prometheus/prometheus.yaml
@@ -5,7 +5,7 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['localhost:9090']
-  - job_name: 'prometheus_node'
+  - job_name: 'node'
     scrape_interval: 5s
     static_configs:
-      - targets: ['192.168.88.36:9100']
+      - targets: ['node_exporter:9100']
